# nycps-ece-sites

./: .gitignore  CLAUDE.md  README.md  prompt-list.txt  pyproject.toml
data/geocode/: site_dir_geo_2019.csv  site_dir_geo_2020.csv  site_dir_geo_2021.csv  site_dir_geo_2022.csv  site_dir_geo_2023.csv  site_dir_geo_2024.csv
data/raw/: site_dir_2019.xlsx  site_dir_2020.xlsx  site_dir_2021.xlsx  site_dir_2022.xlsx  site_dir_2023.xlsx  site_dir_2024.xlsx  site_dir_2025.xlsx
notebooks/: explore.py
src/nycps_ece_sites/: __init__.py  main.py
src/nycps_ece_sites/pipeline/: extract.py
src/nycps_ece_sites/pipeline/transform/: geocode.py
src/nycps_ece_sites/utils/: config_paths.py
tests/: conftest.py  test_geocode_format.py
