[project]
name = "nycps-ece-sites"
version = "0.1.0"
description = "Generating data on NYCPS ECE site"
readme = "README.md"
authors = [
    { name = "Tara Sullivan", email = "tasullivan@oti.nyc.gov" }
]
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sodapy>=2.2.0",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
]

[project.scripts]
nycps-ece-sites = "nycps_ece_sites:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
